src/test/ui/issues/issue-44005.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/issue-44005.rs:26:5
   |
LL |     uncallable(x, |y| f(y));
   |     ^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `&i32` must implement `Foo<'0>`, for any lifetime `'0`...
   = note: ...but `&i32` actually implements `Foo<'1>`, for some specific lifetime `'1`

error: aborting due to previous error

